Added player position indicator. Moved SquareTone QML object to a separate file. Changed seek behavior to match what QIODevice expects.

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>ToneViewer.qml</file>
+        <file>SquareTone.qml</file>
     </qresource>
 </RCC>
