--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>ToneViewer.qml</file>
         <file>SquareTone.qml</file>
+        <file>PianoBackground.qml</file>
     </qresource>
 </RCC>
