--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>ToneViewer.qml</file>
         <file>SquareTone.qml</file>
         <file>PianoBackground.qml</file>
+        <file>MuteButton.qml</file>
     </qresource>
 </RCC>
