Created basic ADSR tool. Don't know if or when I'll end up using it.

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>SquareTone.qml</file>
         <file>PianoBackground.qml</file>
         <file>MuteButton.qml</file>
+        <file>ADSR.qml</file>
     </qresource>
 </RCC>
