Added track selector button that allows switching to a different track in the current file. Added length field to track selector dialog, but it isn't used yet.

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -7,5 +7,6 @@
         <file>PianoBackground.qml</file>
         <file>MuteButton.qml</file>
         <file>ADSR.qml</file>
+        <file>TrackSelectorDialog.qml</file>
     </qresource>
 </RCC>
